finish day 2 exs

--- a/1_Zadania/Dzień_2/3_Wiecej_o_elemencie/style/style.css
+++ b/1_Zadania/Dzień_2/3_Wiecej_o_elemencie/style/style.css
@@ -45,8 +45,8 @@
     position: relative;
 }
 
-.ex5 .menuElement.error {
-    background-color: red;
+.error {
+    color: red;
 }
 
 .ex5 .menuElement.selected {
