--- a/1_Zadania/Dzień_3/2_Poruszanie_po_DOM/style/style.css
+++ b/1_Zadania/Dzień_3/2_Poruszanie_po_DOM/style/style.css
@@ -1,5 +1,5 @@
 .box{
-    width: 150px;
+    width: 200px;
     height: 150px;
     background-color: antiquewhite;
     border-radius: 5px;
@@ -25,4 +25,8 @@
     border-radius: 5px;
     border: black 2px solid;
     margin: 20px;
+}
+
+body{
+    background: dimgrey;
 }
